# slack-lambdabot

./: .gitignore  LICENSE.md  Procfile  README.md  app.json  slack-lambdabot-heroku.cabal  slack-lambdabot.cabal  stack.yaml
src/: Main.hs  Modules.hs
