name:                slack-lambdabot-heroku
version:             0.1.0.0
synopsis:            lambdabot for Slack on Heroku
description:         lambdabot for Slack on Heroku
author:              Mark Andrus Roberts
maintainer:          markandrusroberts@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable slack-lambdabot-heroku
  main-is:             Main.hs
  other-modules:       Modules
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <4.9,
                       html-entities ==1.1.0.0,
                       lambdabot-core ==5.0.3,
                       lambdabot-haskell-plugins ==5.0.3,
                       lambdabot-irc-plugins ==5.0.3,
                       lambdabot-misc-plugins ==5.0.1,
                       lambdabot-novelty-plugins ==5.0.3,
                       lambdabot-reference-plugins ==5.0.3,
                       lambdabot-social-plugins ==5.0.1,
                       lambdabot-trusted ==5.0.2.1,
                       lens ==4.13,
                       mueval ==0.9.1.1.2,
                       silently ==1.2.5,
                       slack-api ==0.5,
                       text ==1.2.1.3,
                       transformers >=0.3,
                       utf8-string ==1.0.1.1
  ghc-options:         -O2 -Wall -fno-warn-unused-do-bind -threaded
  default-language:    Haskell2010
